<resources>
    <string name="app_name">Text Tools</string>

    <string name="input_text_title">Input text</string>
    <string name="num_repetitions">Number of repetitions</string>
    <string name="repeat">Repeat</string>
    <string name="settings">Settings</string>
    <string name="clipboard_copied">Copied to clipboard</string>
    <string name="invalid_repetitions_number">Invalid number of repetitions</string>

    <string name="auto_space_title">Automatic spaces</string>
    <string name="auto_space_summary">Put spaces automatically between each repetition of your text.</string>

    <string name="auto_trim_title">Trim text</string>
    <string name="auto_trim_summary">Automatically removes leading and trailing white spaces of your text.</string>

    <string name="test_banner_id_unit" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_banner_id_unit" translatable="false">ca-app-pub-9367060760258345/2410084849</string>
    <string name="tool_banner_id_unit" translatable="false">ca-app-pub-9367060760258345/1868438026</string>

    <string name="repetitions_limit_title">Repetitions limit</string>
    <string name="repetitions_limit_summary">Prevents from using a very high repetitions number by setting the limit at 9999</string>
    <string name="text_too_long_to_be_copied">Your text is too long to fit in the clipboard. Try repeating it less times.</string>
    <string name="text_too_long_to_be_shared">Your text is too long to be shared. Try repeating it less times.</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>

    <string-array name="text_tools">
        <item>Split text</item>
        <item>Join text</item>
        <item>Repeat text</item>
        <item>Reverse text</item>
        <item>Truncate text</item>
        <item>Trim text</item>
        <item>Add left padding</item>
        <item>Add right padding</item>
        <item>Add prefix</item>
        <item>Add suffix</item>
        <item>Remove empty lines</item>
        <item>Remove duplicate lines</item>
        <item>Filter text</item>
    </string-array>
    <string name="use_newline_char_as_separator">Use newline character as delimiter</string>
    <string name="delimiter_title">Delimiter</string>
    <string name="invalid_input_text">Invalid input text</string>
    <string name="invalid_output_text">Invalid output text</string>
    <string name="split_separator_options">Split separator options</string>
    <string name="input_char">Input character</string>
    <string name="use_character_for_splitting">Use character for splitting</string>
    <string name="use_regex_for_splitting">Use regex for splitting</string>
    <string name="regex">Regex</string>
    <string name="use_length_for_splitting">Use length for splitting</string>
    <string name="length">Length</string>
    <string name="split">Split</string>
    <string name="output_char">Output character</string>
    <string name="char_before_chunk">Character before chunk</string>
    <string name="char_after_chunk">Char after chunk</string>
    <string name="output_separator_options">Output separator options</string>
    <string name="invalid_text_pattern">Invalid text pattern</string>
    <string name="invalid_regex">Invalid regular expression</string>
    <string name="invalid_length">Invalid length</string>
    <string name="join_char">Join character</string>
    <string name="join">Join</string>
    <string name="delete_blank_lines_title">Delete blank lines</string>
    <string name="trim_lines_title">Trim lines</string>
    <string name="reverse">Reverse</string>
    <string name="line_by_line_mode_title">Line-by-line mode</string>
    <string name="truncation_side_title">Truncation side</string>
    <string name="right_side_truncation_title">Right-side truncation</string>
    <string name="left_side_truncation_title">Left-side truncation</string>
    <string name="length_and_lines_title">Length and lines</string>
    <string name="line_by_line_truncating">Truncate text line-by-line</string>
    <string name="suffix_and_prefix_title">Suffix and prefix</string>
    <string name="add_truncation_indicator">Add truncation suffix or prefix</string>
    <string name="truncation_indicator">Truncation suffix or prefix</string>
    <string name="truncate">Truncate</string>
    <string name="invalid_truncation_length">Prefix/suffix length can\'t be greater than truncation length</string>
    <string name="output_separator_helper_text">Character that will be put between the split chunks. (Newline by default.)</string>
    <string name="input_char_separator_helper_text">Character that will be used to break text into parts. (Space by default.)</string>
    <string name="input_regex_separator_helper_text">Regular expression that will be used to break text into parts.</string>
    <string name="input_length_separator_helper_text">Number of characters that will be put in each output chunk.</string>
    <string name="left_side_trimming_title">Left-side trimming</string>
    <string name="right_side_trimming_title">Right-side trimming</string>
    <string name="line_by_line_trimming">Line-by-line trimming</string>
    <string name="trim">Trim</string>
    <string name="padding_char">Padding character</string>
    <string name="add_left_padding">Add left padding</string>
    <string name="line_by_line_padding">Line-by-line padding</string>
    <string name="add_right_padding">Add right padding</string>
    <string name="add_prefix">Add prefix</string>
    <string name="single_line_mode_title">Single-line mode</string>
    <string name="paragraph_mode_title">Paragraph mode</string>
    <string name="skip_empty_lines">Skip empty lines</string>
    <string name="prefix_text">Prefix text</string>
    <string name="suffix_text">Suffix text</string>
    <string name="add_suffix">Add suffix</string>
    <string name="remove_empty_lines">Remove empty lines</string>
    <string name="remove_duplicate_lines">Remove duplicate lines</string>
    <string name="use_a_text_to_filter">Use a text</string>
    <string name="use_a_regex">Use a regular expression</string>
    <string name="input_text_to_filter">Text to filter</string>
    <string name="input_text_to_filter_helper_text">Extract text lines that contain this text.</string>
    <string name="use_a_regex_helper_text">Extract text lines that match this regular expression.</string>
    <string name="reverse_filter_mode">Reverse filter mode</string>
    <string name="filter">Filter</string>

</resources>