<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.alexpi.texttools.fragment.RepeatTextFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.alexpi.texttools.custom.CustomTextField
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_text_title" />
        </com.alexpi.texttools.custom.CustomTextField>

        <CheckedTextView
            style="@style/Theme.TextTools.CheckedTextViewStyle"
            android:id="@+id/truncationSideLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/truncation_side_title"
            app:layout_constraintTop_toBottomOf="@+id/inputField"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/truncationSideRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/truncationSideLabel">

            <RadioButton
                android:id="@+id/leftSideTruncationRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_side_truncation_title"/>
            <RadioButton
                android:id="@+id/rightSideTruncationRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/right_side_truncation_title"/>

        </RadioGroup>

        <CheckedTextView
            style="@style/Theme.TextTools.CheckedTextViewStyle"
            android:id="@+id/lengthAndLinesOptionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/length_and_lines_title"
            app:layout_constraintTop_toBottomOf="@+id/truncationSideRadioGroup"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"/>


        <LinearLayout
            android:id="@+id/lengthAndLinesOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lengthAndLinesOptionsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.alexpi.texttools.custom.CustomTextField
                android:id="@+id/truncationLengthField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/truncationLengthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/length" />
            </com.alexpi.texttools.custom.CustomTextField>

            <CheckBox
                android:id="@+id/lineByLineTruncatingCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/line_by_line_truncating"/>

        </LinearLayout>

        <CheckedTextView
            style="@style/Theme.TextTools.CheckedTextViewStyle"
            android:id="@+id/suffixAndAffixOptionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/suffix_and_prefix_title"
            app:layout_constraintTop_toBottomOf="@+id/lengthAndLinesOptionsLayout"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/suffixAndAffixOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/suffixAndAffixOptionsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <CheckBox
                android:id="@+id/addTruncationIndicatorCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_truncation_indicator"/>

            <com.alexpi.texttools.custom.CustomTextField
                android:id="@+id/delimiterField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/delimiterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/truncation_indicator"/>
            </com.alexpi.texttools.custom.CustomTextField>
        </LinearLayout>

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/truncateButton"
            android:gravity="top" />

        <ProgressBar
            android:id="@+id/progressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/truncateButton" />


        <Button
            android:id="@+id/truncateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:text="@string/truncate"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/suffixAndAffixOptionsLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
